--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -7,10 +7,22 @@
     "COMMON_NAME_CHANNEL": "채널",
     "COMMON_NAME_SEARCH": "검색",
     "COMMON_NAME_MY_INFO": "내정보",
+    "COMMON_NAME_MY_PAGE": "마이페이지",
     "COMMON_NAME_INTEREST": "관심",
     "COMMON_NAME_LABEL": "라벨",
     "COMMON_NAME_SHARE": "공유",
     "COMMON_NAME_MORE": "더보기",
+    "COMMON_NAME_MENU": "메뉴",
+    "COMMON_NAME_BOARD": "게시판",
+    "COMMON_NAME_ADDRBOOK": "주소록",
+    "COMMON_NAME_EMAIL": "이메일",
+    "COMMON_NAME_PHONE": "휴대폰 번호",
+    "COMMON_TITLE_CHANNAME": "채널명",
+    "COMMON_NAME_CATEGORY": "산업군",
+    "COMMON_TITLE_SHARE": "공유 대상",
+    "COMMON_NAME_MEMBER": "멤버",
+    "COMMON_NAME_MANAGER": "매니저",
+    "COMMON_TITLE_USER": "유저",
 
     "COMMON_TAB_ALL": "전체",
     "COMMON_TAB_NOTI": "알림",
@@ -21,5 +33,22 @@
     "COMMON_TAB_MY": "내가 만든",
     "COMMON_TAB_FILE_DRIVE": "파일함",
     "COMMON_TAB_FOLLOWING": "구독중",
-    "COMMON_TAB_MANAGING": "관리중인"
+    "COMMON_TAB_MANAGING": "관리중인",
+    "COMMON_TAB_CONTENTS": "콘텐츠",
+
+    "COMMON_BTN_EDIT": "변경",
+    "COMMON_BTN_OK": "확인",
+    "COMMON_BTN_CANCEL": "취소",
+    "COMMON_BTN_SELECTED": "선택",
+    "COMMON_BTN_ADD": "추가",
+    "COMMON_BTN_EDIT2": "수정",
+    "COMMON_BTN_CLOSE": "닫기",
+    "COMMON_BTN_SELECT": "선택",
+    "COMMON_BTN_REQLIST": "신청목록",
+    "COMMON_TITLE_PROFILE": "프로필",
+    "COMMON_BTN_DELETE": "삭제",
+    "COMMON_BTN_SAVE": "저장",
+
+    "COMMON_MSG_FAILED": "실패했습니다. 관리자에게 문의해주세요.",
+    "COMMON_MSG_NOTFOUND": "해당 컨텐츠를 찾을 수 없습니다.\n나중에 다시 시도해주세요."
   }
