--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -48,7 +48,22 @@
     "COMMON_TITLE_PROFILE": "프로필",
     "COMMON_BTN_DELETE": "삭제",
     "COMMON_BTN_SAVE": "저장",
+    "COMMON_BTN_CONVERT_NOTI_TO_POST": "알림을 게시글로 작성",
+    "COMMON_BTN_CONVERT_POST_TO_NOTI": "게시글을 알림으로 작성",
+    "COMMON_BTN_DELTE_ALIM_FOR_ME": "나에게서만 알림 삭제",
+    "COMMON_BTN_COPY_CLIPBOARD": "내용 클립보드 복사",
+    "COMMON_BTN_REPORT_POST": "해당 게시글 신고",
+    "COMMON_BTN_REPORT_COMMENT": "해당 댓글 신고",
+    "COMMON_BTN_REPORT_USER": "유저 신고",
+    "COMMON_BTN_BLOCK_USER": "유저 차단",
+    "COMMON_BTN_DELETE_POST": "게시글 삭제",
+    "COMMON_BTN_MOVE_POST": "게시글 이동",
+    "COMMON_BTN_COPY_POST": "게시글 복사",
+    "COMMON_BTN_EDIT_POST": "게시글 수정",
+    "COMMON_BTN_REPORT_CHAN": "채널 신고",
+    "COMMON_BTN_REPORT_NOTI": "해당 알림 신고",
 
     "COMMON_MSG_FAILED": "실패했습니다. 관리자에게 문의해주세요.",
-    "COMMON_MSG_NOTFOUND": "해당 컨텐츠를 찾을 수 없습니다.\n나중에 다시 시도해주세요."
+    "COMMON_MSG_NOTFOUND": "해당 컨텐츠를 찾을 수 없습니다.\n나중에 다시 시도해주세요.",
+    "COMMON_MSG_NOFILE": "파일을 선택해 주세요."
   }
