--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -52,16 +52,16 @@
     "COMMON_BTN_CONVERT_POST_TO_NOTI": "Convert post to noti",
     "COMMON_BTN_DELTE_ALIM_FOR_ME": "Delete noti only from me",
     "COMMON_BTN_COPY_CLIPBOARD": "Copy clipboard",
-    "COMMON_BTN_REPORT_POST": "Report this post",
+    "COMMON_BTN_REPORT_POST": "Report a post",
     "COMMON_BTN_REPORT_USER": "Report this user",
     "COMMON_BTN_BLOCK_USER": "Block this user",
-    "COMMON_BTN_REPORT_COMMENT": "Report this comment",
-    "COMMON_BTN_DELETE_POST": "Delete this post",
-    "COMMON_BTN_MOVE_POST": "Move this post",
-    "COMMON_BTN_COPY_POST": "Copy this post",
-    "COMMON_BTN_EDIT_POST": "Edit this post",
-    "COMMON_BTN_REPORT_CHAN": "Report this channel",
-    "COMMON_BTN_REPORT_NOTI": "Report this noti",
+    "COMMON_BTN_REPORT_COMMENT": "Report a comment",
+    "COMMON_BTN_DELETE_POST": "Delete a post",
+    "COMMON_BTN_MOVE_POST": "Move a post",
+    "COMMON_BTN_COPY_POST": "Copy a post",
+    "COMMON_BTN_EDIT_POST": "Edit a post",
+    "COMMON_BTN_REPORT_CHAN": "Report a channel",
+    "COMMON_BTN_REPORT_NOTI": "Report a noti",
 
 
     "COMMON_MSG_FAILED": "Failed. Please contact manager.",
