--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -69,5 +69,27 @@
 
     "COMMON_MSG_FAILED": "Failed. Please contact manager.",
     "COMMON_MSG_NOTFOUND": "The content could not be found.\nPlease try again later.",
-    "COMMON_MSG_NOFILE": "Select Files."
+    "COMMON_MSG_NOFILE": "Select Files.",
+    "COMMON_MSG_DELETE_COMMENT": "Are you sure you want to delete a comment?",
+    "COMMON_MSG_DELETE_REPLY": "Are you sure you want to delete the reply?",
+    "COMMON_MSG_DELETE_NOTI": "Delete noti only applies to me, and users who receive noti are not deleted.",
+    "COMMON_MSG_DELETE_POST": "Are you sure you want to delete the post?",
+    "COMMON_MSG_COPY_FAIL": "Failed to copy.",
+    "COMMON_MSG_COPY_SUCCESS": "Copied successfully.",
+    "COMMON_MSG_REPORT_NOTI": "This noti has been reported.",
+    "COMMON_MSG_REPORT_POST": "This post has been reported.",
+    "COMMON_MSG_REPORT_COMMENT": "This comment has been reported.",
+    "COMMON_MSG_REPORT_CHAN": "This channel has been reported.",
+    "COMMON_MSG_REPORT_USER": "This user has been reported.",
+    "COMMON_MSG_UNSURPORT": "Unsupported browser.",
+    "COMMON_MSG_UNKWON": "Unknown error.",
+    "COMMON_MSG_BLOCKED": "This user has been blocked.",
+    "COMMON_MSG_DELETED_NOTI": "This noti has been deleted from me.",
+    "COMMON_MSG_DELETED_POST": "The post has been deleted.",
+    "COMMON_MSG_COMM_NOPERM": "You do not have permission to write comments. \n Contact manager.",
+    "COMMON_MSG_CANCEL_NOTI": "Are you sure you want to cancel sending noti?",
+    "COMMON_MSG_NOANONY": "Unable to view user information with anonymous posts.",
+    "COMMON_MSG_BLOCK": "Are you sure you want to block this user?",
+    "COMMON_MSG_BEFORE_REPORT": "Are you sure you want to report this user?",
+    "COMMON_MSG_DELETED_COMMENT": "A comment have been deleted."
   }
