--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -68,5 +68,27 @@
 
     "COMMON_MSG_FAILED": "실패했습니다. 관리자에게 문의해주세요.",
     "COMMON_MSG_NOTFOUND": "해당 컨텐츠를 찾을 수 없습니다.\n나중에 다시 시도해주세요.",
-    "COMMON_MSG_NOFILE": "파일을 선택해 주세요."
+    "COMMON_MSG_NOFILE": "파일을 선택해 주세요.",
+    "COMMON_MSG_DELETE_COMMENT": "댓글을 삭제하시겠습니까?",
+    "COMMON_MSG_DELETE_REPLY": "대댓글을 삭제하시겠습니까?",
+    "COMMON_MSG_DELETE_NOTI": "알림 삭제는 나에게서만 적용되며 알림을 받은 사용자는 삭제되지 않습니다.",
+    "COMMON_MSG_DELETE_POST": "게시글을 삭제 하시겠습니까?",
+    "COMMON_MSG_COPY_FAIL": "복사하지 못했습니다.",
+    "COMMON_MSG_COPY_SUCCESS": "복사되었습니다.",
+    "COMMON_MSG_REPORT_NOTI": "해당 알림이 신고되었습니다.",
+    "COMMON_MSG_REPORT_POST": "해당 게시글이 신고되었습니다.",
+    "COMMON_MSG_REPORT_COMMENT": "해당 댓글이 신고되었습니다.",
+    "COMMON_MSG_REPORT_CHAN": "해당 채널이 신고되었습니다.",
+    "COMMON_MSG_REPORT_USER": "해당 유저가 신고되었습니다.",
+    "COMMON_MSG_UNSURPORT": "지원하지 않는 브라우저입니다.",
+    "COMMON_MSG_UNKWON": "알 수 없는 오류입니다.",
+    "COMMON_MSG_BLOCKED": "해당 유저를 차단했습니다.",
+    "COMMON_MSG_DELETED_NOTI": "알림을 나에게서 삭제하였습니다.",
+    "COMMON_MSG_DELETED_POST": "게시글을 삭제하였습니다.",
+    "COMMON_MSG_COMM_NOPERM": "댓글 쓰기 권한이 없습니다. \n 관리자에게 문의하세요.",
+    "COMMON_MSG_CANCEL_NOTI": "알림 발송을 취소 하시겠습니까?",
+    "COMMON_MSG_NOANONY": "익명의 게시글로 유저 정보를 볼 수 없습니다.",
+    "COMMON_MSG_BLOCK": "해당 유저를 차단하시겠습니까?",
+    "COMMON_MSG_BEFORE_REPORT": "해당 유저를 신고하시겠습니까?",
+    "COMMON_MSG_DELETED_COMMENT": "댓글을 삭제하였습니다."
   }
