--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -3,6 +3,10 @@
     "COMMON_BTN_SIGN_IN": "Sign in",
     "COMMON_BTN_LOG_OUT": "Log out",
     "COMMON_MESSAGE_USER_TITLE": "!",
+    "COMM_CHANN_OWNER": "Creator",
+    "COMM_NAME_HOME_PAGE": "HomePage",
+
+    "COMM_INTRO_COMMT": "The easiest way to stay updated-NOTI",
 
     "COMMON_NAME_HOME": "Home",
     "COMMON_NAME_CHANNEL": "Channel",
@@ -23,6 +27,11 @@
     "COMMON_TITLE_SHARE": "Sharing to",
     "COMMON_NAME_MEMBER": "Member",
     "COMMON_NAME_MANAGER": "Manager",
+    "COMMON_TITLE_USER": "User",
+    "COMM_SUBMEM": "Followers",
+    "COMM_TITLE_FILE_DOWNL": "Download File",
+    "COMM_SUBTITLE_BODY_IMG": "Body Image",
+    "COMM_TITLE_COMMENT_EDIT2": "Edit Comment",
 
     "COMMON_TAB_ALL": "All",
     "COMMON_TAB_NOTI": "Noti",
@@ -30,23 +39,26 @@
     "COMMON_TAB_RECENT": "Recent",
     "COMMON_TAB_LIKED": "Liked",
     "COMMON_TAB_SAVED": "Saved",
-    "COMM_VOCA_THIS": "this",
-    "COMMON_TAB_MY": "My",
+    "COMM_TAB_MY_MADE": "My",
+    "COMM_TAB_MY_SEND": "Sent by me",
+    "COMM_TAB_MY_CHAN": "My Channel",
+    "COMM_TAB_MY_WRITE": "Written by me",
     "COMMON_TAB_FILE_DRIVE": "File Drive",
     "COMMON_TAB_FOLLOWING": "Following",
     "COMMON_TAB_MANAGING": "Managing",
     "COMMON_TAB_CONTENTS": "Contents",
-    "COMMON_TITLE_USER": "User",
 
-    "COMMON_BTN_EDIT": "Edit",
+    "COMM_BTN_EDIT": "Edit",
     "COMMON_BTN_OK": "OK",
-    "COMMON_BTN_CANCEL": "Cancel",
+    "COMM_BTN_CANCEL": "Cancel",
     "COMMON_BTN_SELECTED": "Selected",
     "COMMON_BTN_ADD": "Add",
-    "COMMON_BTN_EDIT2": "Edit",
-    "COMMON_BTN_CLOSE": "Close",
+    "COMM_BTN_EDIT2": "Edit",
+    "COMM_BTN_CLOSE": "Close",
     "COMMON_BTN_SELECT": "Select",
     "COMMON_BTN_REQLIST": "Request List",
+    "COMM_BTN_IDENTI_VERIF": "Identify Verification",
+    "COMM_BTN_VERIFI": "Verification",
     "COMMON_TITLE_PROFILE": "Profile",
     "COMMON_BTN_DELETE": "Delete",
     "COMMON_BTN_SAVE": "Save",
@@ -57,19 +69,60 @@
     "COMMON_BTN_REPORT_POST": "Report a post",
     "COMMON_BTN_REPORT_USER": "Report this user",
     "COMMON_BTN_BLOCK_USER": "Block this user",
+    "COMM_BTN_REPLY": "Reply",
+    "COMM_BTN_REPLY_COMM": "Comment reply",
     "COMMON_BTN_REPORT_COMMENT": "Report a comment",
     "COMMON_BTN_DELETE_POST": "Delete a post",
     "COMMON_BTN_MOVE_POST": "Move a post",
     "COMMON_BTN_COPY_POST": "Copy a post",
-    "COMMON_BTN_EDIT_POST": "Edit a post",
+    "COMM_BTN_EDIT_POST": "Edit a post",
     "COMMON_BTN_REPORT_CHAN": "Report a channel",
     "COMMON_BTN_REPORT_NOTI": "Report a noti",
     "COMMON_STATUS_PROCEEDING": "Proceeding", 
     "COMMON_STATUS_COMPLETED": "Completed", 
     "COMMON_STATUS_UNRESOLVED": "Unresolved",
     "COMM_MSG_ASK_BLOCK": "Block",
+    "COMM_BTN_APPLY": "Apply",
+    "COMM_BTN_WRITE": "Write",
+    "COMM_BTN_SEND": "Send",
+    "COMM_BTN_PUBLISH": "Publish",
+    "COMM_BTN_WRITE_CMNT": "Write a comment",
+    "COMM_BTN_MANAGE": "Manage",
+    "COMM_BTN_SUB": "Subscribe",
+    "COMM_BTN_UNSUB": "Unsubscribe",
+    "COMM_BTN_DO_LATER": "Do it later",
+    "COMM_BTN_APPLY_MEMB": "Apply for membership",
+    "COMM_BTN_CANCEL_MEMB": "Cancel membership",
+    "COMM_BTN_GET_NOTI": "Receive noti",
+    "COMM_BTN_CANCEL_NOTI": "Cancel noti",
+    "COMM_BTN_VIEW_HIST": "View history",
+    "COMM_BTN_SELEC_AGAIN": "Select again",
+    "COMM_BTN_SEND_NOTI": "Send noti",
+    "COMM_BTN_SEND_NOTI_AGAIN": "Send noti again",
+    "COMM_BTN_APPROVE": "Approve",
+    "COMM_BTN_REJECT": "Reject",
+    "COMM_BTN_SAVE_SAMP": "Save as a sample",
+    "COMM_BTN_CONT_NONMEMB": "Contact as a non-member",
+    "COMM_BTN_VIEW_WEBSITE": "View Website",
+    "COMM_BTN_SHORTCUT": "Shortcut",
+    "COMM_BTN_GET_SAMP": "Get a sample",
+    "COMM_BTN_SUBMIT": "Submit",
+    "COMM_BTN_SAVE_DRAFT": "Save Draft",
+
+    "COMM_CATE_BUSINESS": "Business",
+    "COMM_CATE_GPOVER": "Government",
+    "COMM_CATE_SCHOOL": "School",
+    "COMM_CATE_RELIGIOUS": "Religious",
+    "COMM_CATE_CLUB": "Club",
+    "COMM_CATE_HOSP": "Hospital",
+    "COMM_CATE_PHAR": "Pharmace",
+    "COMM_CATE_MALL": "Mall",
+    "COMM_CATE_FAM": "Family",
+    "COMM_CATE_TEAM": "Team",
+    "COMM_CATE_ETC": "etc",
 
     "COMM_PLS_LOGIN": "Please log in.",
+    "COMM_MSG_NOPERM": "You do not have permission to view.",
     "COMM_MSG_AFTER_SAVE": "Saved successfully.",
     "COMMON_MSG_FAILED": "Failed. Please contact manager.",
     "COMMON_MSG_NOTFOUND": "The content could not be found.\nPlease try again later.",
@@ -80,7 +133,7 @@
     "COMMON_MSG_DELETE_NOTI": "Delete noti only applies to me, and users who receive noti are not deleted.",
     "COMMON_MSG_DELETE_POST": "Are you sure you want to delete the post?",
     "COMMON_MSG_COPY_FAIL": "Failed to copy.",
-    "COMMON_MSG_COPY_SUCCESS": "Copied successfully.",
+    "COMMON_MSG_COPY_SUCCESS": "Copied successfully!",
     "COMMON_MSG_REPORT_NOTI": "This noti has been reported.",
     "COMMON_MSG_REPORT_POST": "This post has been reported.",
     "COMMON_MSG_REPORT_COMMENT": "This comment has been reported.",
@@ -95,11 +148,14 @@
     "COMMON_MSG_CANCEL_NOTI": "Are you sure you want to cancel sending noti?",
     "COMM_MSG_CANCELED_NOTI": "The notification has been canceled.",
     "COMMON_MSG_NOANONY": "Unable to view user information with anonymous posts.",
+    "COMM_CONT_NO_FOUND": "No contents found.",
+
     "COMMON_MSG_BLOCK": "Are you sure you want to block this user?",
     "COMMON_MSG_BEFORE_REPORT": "Are you sure you want to report this user?",
     "COMMON_MSG_NO_LOGIN": "Please log in and use it.",
     "COMM_MSG_CANCEL_FAIL": "The message cancellation was unsuccessful.\nPlease attempt again after restarting the app.",
     "COMM_MSG_CANCLE_TIMEOUT": "Cancellation is not possible after 3 minutes.",
     "COMM_MSG_MEMB_NEED": "You are not a follower of that channel. Please apply for followers.",
-    "COMM_MSG_CHAN_NONE": "The channel cannot be found. Please try again later."
+    "COMM_MSG_CHAN_NONE": "The channel cannot be found. Please try again later.",
+    "COMM_MSG_SELECT_FILE": "Please select a file."
   }
