--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -3,6 +3,10 @@
     "COMMON_BTN_SIGN_IN": "로그인" ,
     "COMMON_BTN_LOG_OUT": "로그아웃",
     "COMMON_MESSAGE_USER_TITLE": "님!",
+    "COMM_CHANN_OWNER": "소유자",
+    "COMM_NAME_HOME_PAGE": "홈페이지",
+
+    "COMM_INTRO_COMMT": "가장 편리한 구독-알림",
 
     "COMMON_NAME_HOME": "홈",
     "COMMON_NAME_CHANNEL": "채널",
@@ -24,6 +28,10 @@
     "COMMON_NAME_MEMBER": "멤버",
     "COMMON_NAME_MANAGER": "매니저",
     "COMMON_TITLE_USER": "유저",
+    "COMM_SUBMEM": "구독자",
+    "COMM_TITLE_FILE_DOWNL": "파일 다운로드",
+    "COMM_SUBTITLE_BODY_IMG": "본문 이미지",
+    "COMM_TITLE_COMMENT_EDIT2": "댓글 수정",
 
     "COMMON_TAB_ALL": "전체",
     "COMMON_TAB_NOTI": "알림",
@@ -31,25 +39,30 @@
     "COMMON_TAB_RECENT": "최신",
     "COMMON_TAB_LIKED": "좋아요",
     "COMMON_TAB_SAVED": "스크랩",
-    "COMMON_TAB_MY": "내가 만든",
+    "COMM_TAB_MY_MADE": "내가 만든",
+    "COMM_TAB_MY_SEND": "내가 보낸",
+    "COMM_TAB_MY_CHAN": "내 채널",
+    "COMM_TAB_MY_WRITE": "내가 쓴",
     "COMMON_TAB_FILE_DRIVE": "파일함",
     "COMMON_TAB_FOLLOWING": "구독중",
     "COMMON_TAB_MANAGING": "관리중인",
     "COMMON_TAB_CONTENTS": "콘텐츠",
 
-    "COMMON_BTN_EDIT": "변경",
+    "COMM_VOCA_THIS": "해당",
+    "COMM_BTN_EDIT": "변경",
     "COMMON_BTN_OK": "확인",
-    "COMMON_BTN_CANCEL": "취소",
+    "COMM_BTN_CANCEL": "취소",
     "COMMON_BTN_SELECTED": "선택",
     "COMMON_BTN_ADD": "추가",
-    "COMMON_BTN_EDIT2": "수정",
-    "COMMON_BTN_CLOSE": "닫기",
+    "COMM_BTN_EDIT2": "수정",
+    "COMM_BTN_CLOSE": "닫기",
     "COMMON_BTN_SELECT": "선택",
     "COMMON_BTN_REQLIST": "신청목록",
+    "COMM_BTN_IDENTI_VERIF": "실명인증",
+    "COMM_BTN_VERIFI": "인증하기",
     "COMMON_TITLE_PROFILE": "프로필",
     "COMMON_BTN_DELETE": "삭제",
     "COMMON_BTN_SAVE": "저장",
-    "COMM_VOCA_THIS": "해당",
     "COMMON_BTN_CONVERT_NOTI_TO_POST": "알림을 게시글로 작성",
     "COMMON_BTN_CONVERT_POST_TO_NOTI": "게시글을 알림으로 작성",
     "COMMON_BTN_DELTE_ALIM_FOR_ME": "나에게서만 알림 삭제",
@@ -58,18 +71,59 @@
     "COMMON_BTN_REPORT_COMMENT": "해당 댓글 신고",
     "COMMON_BTN_REPORT_USER": "유저 신고",
     "COMMON_BTN_BLOCK_USER": "유저 차단",
+    "COMM_BTN_REPLY": "답장하기",
+    "COMM_BTN_REPLY_COMM": "답글달기",
     "COMMON_BTN_DELETE_POST": "게시글 삭제",
     "COMMON_BTN_MOVE_POST": "게시글 이동",
     "COMMON_BTN_COPY_POST": "게시글 복사",
-    "COMMON_BTN_EDIT_POST": "게시글 수정",
+    "COMM_BTN_EDIT_POST": "게시글 수정",
     "COMMON_BTN_REPORT_CHAN": "채널 신고",
     "COMMON_BTN_REPORT_NOTI": "해당 알림 신고",
     "COMMON_STATUS_PROCEEDING": "진행중", 
     "COMMON_STATUS_COMPLETED": "완료", 
     "COMMON_STATUS_UNRESOLVED": "미해결",
     "COMM_MSG_ASK_BLOCK": "차단하시겠습니까",
+    "COMM_BTN_APPLY": "적용하기",
+    "COMM_BTN_WRITE": "작성하기",
+    "COMM_BTN_SEND": "발송하기",
+    "COMM_BTN_PUBLISH": "게시하기",
+    "COMM_BTN_WRITE_CMNT": "댓글쓰기",
+    "COMM_BTN_MANAGE": "관리하기",
+    "COMM_BTN_SUB": "구독하기",
+    "COMM_BTN_UNSUB": "구독취소",
+    "COMM_BTN_DO_LATER": "나중에 하기",
+    "COMM_BTN_APPLY_MEMB": "멤버신청",
+    "COMM_BTN_CANCEL_MEMB": "멤버취소",
+    "COMM_BTN_GET_NOTI": "알림받기",
+    "COMM_BTN_CANCEL_NOTI": "알림취소",
+    "COMM_BTN_VIEW_HIST": "이력보기",
+    "COMM_BTN_SELEC_AGAIN": "다시 선택",
+    "COMM_BTN_SEND_NOTI": "알림 보내기",
+    "COMM_BTN_SEND_NOTI_AGAIN": "알림 또 보내기",
+    "COMM_BTN_APPROVE": "승인",
+    "COMM_BTN_REJECT": "거절",
+    "COMM_BTN_SAVE_SAMP": "샘플로 저장",
+    "COMM_BTN_CONT_NONMEMB": "비회원 문의하기",
+    "COMM_BTN_VIEW_WEBSITE": "홈페이지 바로가기",
+    "COMM_BTN_SHORTCUT": "바로가기",
+    "COMM_BTN_GET_SAMP": "샘플 가져오기",
+    "COMM_BTN_SUBMIT": "제출하기",
+    "COMM_BTN_SAVE_DRAFT": "임시저장",
+
+    "COMM_CATE_BUSINESS": "기업",
+    "COMM_CATE_GPOVER": "정부",
+    "COMM_CATE_SCHOOL": "학교",
+    "COMM_CATE_RELIGIOUS": "종교단체",
+    "COMM_CATE_CLUB": "동호회",
+    "COMM_CATE_HOSP": "병원",
+    "COMM_CATE_PHAR": "약국",
+    "COMM_CATE_MALL": "매장",
+    "COMM_CATE_FAM": "가족",
+    "COMM_CATE_TEAM": "팀",
+    "COMM_CATE_ETC": "기타",
 
     "COMM_PLS_LOGIN": "로그인을 해주세요.",
+    "COMM_MSG_NOPERM": "열람 권한이 없습니다.",
     "COMM_MSG_AFTER_SAVE": "저장되었습니다.",
     "COMMON_MSG_FAILED": "실패했습니다. 관리자에게 문의해주세요.",
     "COMMON_MSG_NOTFOUND": "해당 컨텐츠를 찾을 수 없습니다.\n나중에 다시 시도해주세요.",
@@ -95,6 +149,7 @@
     "COMMON_MSG_CANCEL_NOTI": "알림 발송을 취소 하시겠습니까?",
     "COMM_MSG_CANCELED_NOTI": "알림 발송을 취소하였습니다.",
     "COMMON_MSG_NOANONY": "익명의 게시글로 유저 정보를 볼 수 없습니다.",
+    "COMM_CONT_NO_FOUND": "컨텐츠가 없습니다.",
 
     "COMMON_MSG_BLOCK": "해당 유저를 차단하시겠습니까?",
     "COMMON_MSG_BEFORE_REPORT": "해당 유저를 신고하시겠습니까?",
@@ -102,5 +157,6 @@
     "COMM_MSG_CANCEL_FAIL": "취고하지 못했습니다. 앱을 다시 실행 후 시도해주세요.",
     "COMM_MSG_CANCLE_TIMEOUT": "3분이 지나 취소가 불가능합니다.",
     "COMM_MSG_MEMB_NEED": "해당 채널에 멤버가 아닙니다. 멤버로 신청 후 시도해주세요!",
-    "COMM_MSG_CHAN_NONE": "채널이 확인되지 않습니다. 나중에 다시 시도해주세요!"
+    "COMM_MSG_CHAN_NONE": "채널이 확인되지 않습니다. 나중에 다시 시도해주세요!",
+    "COMM_MSG_SELECT_FILE": "파일을 선택해주세요."
   }
