--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -88,8 +88,8 @@
     "COMM_BTN_PUBLISH": "Publish",
     "COMM_BTN_WRITE_CMNT": "Write a comment",
     "COMM_BTN_MANAGE": "Manage",
-    "COMM_BTN_SUB": "Subscribe",
-    "COMM_BTN_UNSUB": "Unsubscribe",
+    "COMM_BTN_SUB": "follow",
+    "COMM_BTN_UNSUB": "followed",
     "COMM_BTN_DO_LATER": "Do it later",
     "COMM_BTN_APPLY_MEMB": "Apply for membership",
     "COMM_BTN_CANCEL_MEMB": "Cancel membership",
