--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -89,7 +89,7 @@
     "COMM_BTN_WRITE_CMNT": "Write a comment",
     "COMM_BTN_MANAGE": "Manage",
     "COMM_BTN_SUB": "follow",
-    "COMM_BTN_UNSUB": "followed",
+    "COMM_BTN_UNSUB": "following",
     "COMM_BTN_DO_LATER": "Do it later",
     "COMM_BTN_APPLY_MEMB": "Apply for membership",
     "COMM_BTN_CANCEL_MEMB": "Cancel membership",
