--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -4,6 +4,7 @@
     "COMMON_BTN_LOG_OUT": "Log out",
     "COMMON_MESSAGE_USER_TITLE": "!",
     "COMM_CHANN_OWNER": "Creator",
+    "COMM_CHAN_MANAGER": "Manager",
     "COMM_NAME_HOME_PAGE": "HomePage",
 
     "COMM_INTRO_COMMT": "The easiest way to stay updated-NOTI",
