--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -4,6 +4,7 @@
     "COMMON_BTN_LOG_OUT": "로그아웃",
     "COMMON_MESSAGE_USER_TITLE": "님!",
     "COMM_CHANN_OWNER": "소유자",
+    "COMM_CHAN_MANAGER": "관리자",
     "COMM_NAME_HOME_PAGE": "홈페이지",
 
     "COMM_INTRO_COMMT": "가장 편리한 구독-알림",
