--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -153,6 +153,7 @@
     "COMM_CONT_NO_FOUND": "컨텐츠가 없습니다.",
 
     "COMMON_MSG_BLOCK": "해당 유저를 차단하시겠습니까?",
+    "COMMON_MSG_BLOCK_BOAR": "해당 게시글을 차단하시겠습니까?",
     "COMMON_MSG_BEFORE_REPORT": "해당 유저를 신고하시겠습니까?",
     "COMMON_MSG_NO_LOGIN": "로그인 후 이용해주세요.",
     "COMM_MSG_CANCEL_FAIL": "취고하지 못했습니다. 앱을 다시 실행 후 시도해주세요.",
