--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -151,6 +151,8 @@
     "COMMON_MSG_NOANONY": "Unable to view user information with anonymous posts.",
     "COMM_CONT_NO_FOUND": "No contents found.",
 
+    "COMMON_MSG_NO_PHONE": "There is no registered phone number.",
+
     "COMMON_MSG_BLOCK": "Are you sure you want to block this user?",
     "COMMON_MSG_BLOCK_BOAR": "Are you sure you want to block this post?",
     "COMMON_MSG_BEFORE_REPORT": "Are you sure you want to report this user?",
