--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -21,6 +21,7 @@
     "COMMON_NAME_MENU": "Menu",
     "COMMON_NAME_BOARD": "Board",
     "COMMON_NAME_ADDRBOOK": "Address Book",
+    "COMMON_NAME_NAME": "Name",
     "COMMON_NAME_EMAIL": "Email",
     "COMMON_NAME_PHONE": "Phone",
     "COMMON_TITLE_CHANNAME": "Channel Name",
