--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -21,6 +21,7 @@
     "COMMON_NAME_MENU": "메뉴",
     "COMMON_NAME_BOARD": "게시판",
     "COMMON_NAME_ADDRBOOK": "주소록",
+    "COMMON_NAME_NAME": "이름",
     "COMMON_NAME_EMAIL": "이메일",
     "COMMON_NAME_PHONE": "휴대폰 번호",
     "COMMON_TITLE_CHANNAME": "채널명",
