--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -72,7 +72,7 @@
     "COMMON_BTN_REPORT_USER": "Report this user",
     "COMMON_BTN_BLOCK_USER": "Block this user",
     "COMM_BTN_REPLY": "Reply",
-    "COMM_BTN_REPLY_COMM": "Comment reply",
+    "COMM_BTN_REPLY_COMM": "reply",
     "COMMON_BTN_REPORT_COMMENT": "Report a comment",
     "COMMON_BTN_DELETE_POST": "Delete a post",
     "COMMON_BTN_MOVE_POST": "Move a post",
