--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -6,6 +6,7 @@
     "COMM_CHANN_OWNER": "Creator",
     "COMM_CHAN_MANAGER": "Manager",
     "COMM_NAME_HOME_PAGE": "HomePage",
+    "COMM_NAME_CONT_FILE": "Attached File",
 
     "COMM_INTRO_COMMT": "The easiest way to stay updated-NOTI",
 
