--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -6,6 +6,7 @@
     "COMM_CHANN_OWNER": "소유자",
     "COMM_CHAN_MANAGER": "관리자",
     "COMM_NAME_HOME_PAGE": "홈페이지",
+    "COMM_NAME_CONT_FILE": "첨부파일",
 
     "COMM_INTRO_COMMT": "가장 편리한 구독-알림",
 
