--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -12,6 +12,7 @@
 
     "COMMON_NAME_HOME": "Home",
     "COMMON_NAME_CHANNEL": "Channel",
+    "COMMON_NAME_CHANNELS": "Channels",
     "COMMON_NAME_SEARCH": "Search",
     "COMMON_NAME_MY_INFO": "My Info",
     "COMMON_NAME_MY_PAGE": "My Page",
