--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -12,6 +12,7 @@
 
     "COMMON_NAME_HOME": "홈",
     "COMMON_NAME_CHANNEL": "채널",
+    "COMMON_NAME_CHANNELS": "채널",
     "COMMON_NAME_SEARCH": "검색",
     "COMMON_NAME_MY_INFO": "내정보",
     "COMMON_NAME_MY_PAGE": "마이페이지",
