--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -2,6 +2,7 @@
     "COMMON_NAME_APP": "uniBuzzy",
     "COMMON_BTN_SIGN_IN": "Sign in",
     "COMMON_BTN_LOG_OUT": "Log out",
+    "COMMON_BTN_OKAY": "Okay",
     "COMMON_MESSAGE_USER_TITLE": "!",
     "COMM_CHANN_OWNER": "Creator",
     "COMM_CHAN_MANAGER": "Manager",
