--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -2,6 +2,7 @@
     "COMMON_NAME_APP": "더알림",
     "COMMON_BTN_SIGN_IN": "로그인" ,
     "COMMON_BTN_LOG_OUT": "로그아웃",
+    "COMMON_BTN_OKAY": "확인",
     "COMMON_MESSAGE_USER_TITLE": "님!",
     "COMM_CHANN_OWNER": "소유자",
     "COMM_CHAN_MANAGER": "관리자",
