--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -125,7 +125,7 @@
     "COMM_CATE_MALL": "매장",
     "COMM_CATE_FAM": "가족",
     "COMM_CATE_TEAM": "팀",
-    "COMM_CATE_ETC": "기타",
+    "COMM_CATE_ETC": "etc",
 
     "COMM_PLS_LOGIN": "로그인을 해주세요.",
     "COMM_MSG_NOPERM": "열람 권한이 없습니다.",
