edit appType -> store

--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -4,6 +4,7 @@
   "COMMON_BTN_LOG_OUT": "로그아웃",
   "COMMON_BTN_OKAY": "확인",
   "COMMON_BTN_MANAGE": "관리",
+  "COMMON_BTN_CANCEL" : "취소",
   "COMMON_BTN_NEW": "신규",
   "COMMON_MESSAGE_USER_TITLE": "님!",
   "COMM_CHANN_OWNER": "소유자",
