--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -4,6 +4,7 @@
   "COMMON_BTN_LOG_OUT": "Log out",
   "COMMON_BTN_OKAY": "Okay",
   "COMMON_BTN_MANAGE": "edit",
+  "COMMON_BTN_CANCEL" : "Cancel",
   "COMMON_BTN_NEW": "New",
   "COMMON_letter_USER_TITLE": "!",
   "COMM_CHANN_OWNER": "Creator",
