--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -6,6 +6,7 @@
   "COMMON_BTN_MANAGE": "edit",
   "COMMON_BTN_CANCEL" : "Cancel",
   "COMMON_BTN_NEW": "New",
+  "COMMON_BTN_SEND" : "Send",
   "COMMON_letter_USER_TITLE": "!",
   "COMM_CHANN_OWNER": "Creator",
   "COMM_CHAN_MANAGER": "Manager",
