--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -6,6 +6,7 @@
   "COMMON_BTN_MANAGE": "관리",
   "COMMON_BTN_CANCEL" : "취소",
   "COMMON_BTN_NEW": "신규",
+  "COMMON_BTN_SEND" : "전송",
   "COMMON_MESSAGE_USER_TITLE": "님!",
   "COMM_CHANN_OWNER": "소유자",
   "COMM_CHAN_MANAGER": "관리자",
