router.replace error fixed / contents url clickable

--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -6,7 +6,7 @@
   "COMMON_BTN_MANAGE": "관리",
   "COMMON_BTN_CANCEL" : "취소",
   "COMMON_BTN_NEW": "신규",
-  "COMMON_BTN_SEND" : "전송",
+  "COMMON_BTN_SEND" : "발송",
   "COMMON_MESSAGE_USER_TITLE": "님!",
   "COMM_CHANN_OWNER": "소유자",
   "COMM_CHAN_MANAGER": "관리자",
@@ -264,9 +264,9 @@
   "COMM_MSG_NOTIIS" : "해당 컨텐츠의 알림설정이",
   "COMM_MSG_SUCCESS" : "되었습니다.",
   "COMM_MSG_RELEASED" : "해제되었습니다.",
-  "COMM_MSG_SUCC_LETTER" : "쪽지를 성공적으로 전송하였습니다.",
+  "COMM_MSG_SUCC_LETTER" : "쪽지를 성공적으로 발송하였습니다.",
   "COMM_MSG_SUCC_POST" : "글을 성공적으로 게시하였습니다.",
-  "COMM_MSG_FAIL_LETTER" : "쪽지를 전송하지 못했습니다.",
+  "COMM_MSG_FAIL_LETTER" : "쪽지를 발송하지 못했습니다.",
   "COMM_MSG_FAIL_POST" : "글을 게시하지 못했습니다.",
   "COMM_MSG_DELETED_MEMO" : "메모를 삭제하였습니다.",
   "COMM_MSG_DELETED_MEMO_FAIL" : "메모를 삭제하지 못했습니다.",
