--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -207,6 +207,8 @@
   "COMMON_MSG_FAILED": "실패했습니다. 관리자에게 문의해주세요.",
   "COMMON_MSG_NOTFOUND": "해당 컨텐츠를 찾을 수 없습니다.\n나중에 다시 시도해주세요.",
   "COMMON_MSG_NOFILE": "파일을 선택해 주세요.",
+  "COMMON_MSG_SAVE_MEMO": "메모가 저장되었습니다.",
+  "COMMON_MSG_EDIT_MEMO": "메모가 수정되었습니다.",
   "COMMON_MSG_DELETE_MEMO": "메모를 삭제하시겠습니까?",
   "COMMON_MSG_DELETED_MEMO": "메모를 삭제하였습니다.",
   "COMMON_MSG_DELETE_COMMENT": "댓글을 삭제하시겠습니까?",
