edit memo pop up

--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -121,6 +121,7 @@
   "COMMON_TODO_ME" : "Me",
   "COMMON_TODO_GOAL_DATE" : "Target Date",
   "COMMON_TITLE_MEMO" : "Memo",
+  "COMMON_TITLE_NEWMEMO" : "New memo",
 
 
   "COMM_BTN_EDIT": "Edit",
