--- a/src/assets/i18n/lang/ko.json
+++ b/src/assets/i18n/lang/ko.json
@@ -121,6 +121,7 @@
   "COMMON_TODO_ME" : "나", 
   "COMMON_TODO_GOAL_DATE" : "목표일",
   "COMMON_TITLE_MEMO" : "메모",
+  "COMMON_TITLE_NEWMEMO" : "새 메모",
 
   "COMM_VOCA_THIS": "해당",
   "COMM_BTN_EDIT": "변경",
